prevent overflow of header when resizing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1170,6 +1170,7 @@ body.is-preload #bg:before {
   max-width: 100%;
   height: 100vh;
   text-align: center;
+  overflow-y: hidden;
 }
 
 #header > * {
